tests/error/comptime/check_destruct_value3.bz
// error: invalid memory access of an object of type 'mut int32'
// note: while evaluating expression at compile time
// note: address points to an object from a finished stack frame
// error: failed to evaluate expression at compile time
function foo() -> &mut int32
{
	mut i = 0;
	return i;
}

function test()
{
	(consteval {
		__builtin_destruct_value(foo());
	});
}
